k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rick-morty-app
  labels:
    app.kubernetes.io/name: rick-morty-app
    app.kubernetes.io/component: namespace
