k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-morty-app
  namespace: rick-morty-app
  labels:
    app.kubernetes.io/name: rick-morty-app
    app.kubernetes.io/component: api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: rick-morty-app
    app.kubernetes.io/component: api
